[package]
name = "hemmer-gcp-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hemmer provider runtime (placeholder)
# hemmer-runtime = "0.1"

# SDK dependencies for all services
# GCP SDK dependencies
# google-factchecktools = "1"
# google-areainsights = "1"
# google-billingbudgets = "1"
# google-billingbudgets = "1"
# google-dataflow = "1"
# google-playdeveloperreporting = "1"
# google-playdeveloperreporting = "1"
# google-iamcredentials = "1"
# google-privateca = "1"
# google-privateca = "1"
# google-solar = "1"
# google-cloudfunctions = "1"
# google-cloudfunctions = "1"
# google-cloudfunctions = "1"
# google-cloudfunctions = "1"
# google-cloudfunctions = "1"
# google-essentialcontacts = "1"
# google-orgpolicy = "1"
# google-remotebuildexecution = "1"
# google-remotebuildexecution = "1"
# google-remotebuildexecution = "1"
# google-urlshortener = "1"
# google-workstations = "1"
# google-workstations = "1"
# google-webrisk = "1"
# google-keep = "1"
# google-datastream = "1"
# google-datastream = "1"
# google-servicenetworking = "1"
# google-servicenetworking = "1"
# google-binaryauthorization = "1"
# google-binaryauthorization = "1"
# google-area120tables = "1"
# google-connectors = "1"
# google-connectors = "1"
# google-apihub = "1"
# google-apigeeregistry = "1"
# google-beyondcorp = "1"
# google-beyondcorp = "1"
# google-toolresults = "1"
# google-toolresults = "1"
# google-clouderrorreporting = "1"
# google-civicinfo = "1"
# google-apigee = "1"
# google-mybusinessverifications = "1"
# google-developerconnect = "1"
# google-datapipelines = "1"
# google-firebasedynamiclinks = "1"
# google-runtimeconfig = "1"
# google-runtimeconfig = "1"
# google-storagebatchoperations = "1"
# google-tracing = "1"
# google-adexchangebuyer2 = "1"
# google-saasservicemgmt = "1"
# google-proximitybeacon = "1"
# google-resourcesettings = "1"
# google-datalineage = "1"
# google-libraryagent = "1"
# google-acmedns = "1"
# google-publicca = "1"
# google-publicca = "1"
# google-publicca = "1"
# google-networkservices = "1"
# google-networkservices = "1"
# google-netapp = "1"
# google-netapp = "1"
# google-aiplatform = "1"
# google-aiplatform = "1"
# google-pagespeedonline = "1"
# google-pagespeedonline = "1"
# google-pagespeedonline = "1"
# google-pagespeedonline = "1"
# google-tasks = "1"
# google-sqladmin = "1"
# google-sqladmin = "1"
# google-discoveryengine = "1"
# google-discoveryengine = "1"
# google-discoveryengine = "1"
# google-gkeonprem = "1"
# google-cloudlocationfinder = "1"
# google-cloudlocationfinder = "1"
# google-mybusinesslodging = "1"
# google-mybusinessaccountmanagement = "1"
# google-searchads360 = "1"
# google-alertcenter = "1"
# google-servicemanagement = "1"
# google-smartdevicemanagement = "1"
# google-domains = "1"
# google-domains = "1"
# google-domains = "1"
# google-calendar = "1"
# google-vpcaccess = "1"
# google-vpcaccess = "1"
# google-sheets = "1"
# google-looker = "1"
# google-forms = "1"
# google-cloudiot = "1"
# google-genomics = "1"
# google-genomics = "1"
# google-genomics = "1"
# google-pollen = "1"
# google-playgrouping = "1"
# google-oslogin = "1"
# google-oslogin = "1"
# google-oslogin = "1"
# google-gamesmanagement = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-gkehub = "1"
# google-securityposture = "1"
# google-networkmanagement = "1"
# google-networkmanagement = "1"
# google-securitycenter = "1"
# google-securitycenter = "1"
# google-securitycenter = "1"
# google-securitycenter = "1"
# google-securitycenter = "1"
# google-datamanager = "1"
# google-chat = "1"
# google-apphub = "1"
# google-apphub = "1"
# google-dialogflow = "1"
# google-dialogflow = "1"
# google-dialogflow = "1"
# google-dialogflow = "1"
# google-dialogflow = "1"
# google-rapidmigrationassessment = "1"
# google-documentai = "1"
# google-documentai = "1"
# google-documentai = "1"
# google-artifactregistry = "1"
# google-artifactregistry = "1"
# google-artifactregistry = "1"
# google-qpxexpress = "1"
# google-analyticsdata = "1"
# google-analyticsdata = "1"
# google-file = "1"
# google-file = "1"
# google-cloudresourcemanager = "1"
# google-cloudresourcemanager = "1"
# google-cloudresourcemanager = "1"
# google-cloudresourcemanager = "1"
# google-cloudresourcemanager = "1"
# google-css = "1"
# google-walletobjects = "1"
# google-readerrevenuesubscriptionlinking = "1"
# google-youtubereporting = "1"
# google-firestore = "1"
# google-firestore = "1"
# google-firestore = "1"
# google-config = "1"
# google-translate = "1"
# google-translate = "1"
# google-translate = "1"
# google-redis = "1"
# google-redis = "1"
# google-meet = "1"
# google-dataplex = "1"
# google-analyticshub = "1"
# google-analyticshub = "1"
# google-playintegrity = "1"
# google-cloudkms = "1"
# google-fusiontables = "1"
# google-fusiontables = "1"
# google-accessapproval = "1"
# google-checks = "1"
# google-cloudprivatecatalog = "1"
# google-addressvalidation = "1"
# google-chromewebstore = "1"
# google-chromewebstore = "1"
# google-websecurityscanner = "1"
# google-websecurityscanner = "1"
# google-websecurityscanner = "1"
# google-places = "1"
# google-recaptchaenterprise = "1"
# google-parallelstore = "1"
# google-parallelstore = "1"
# google-contactcenterinsights = "1"
# google-recommendationengine = "1"
# google-cloudidentity = "1"
# google-cloudidentity = "1"
# google-healthcare = "1"
# google-healthcare = "1"
# google-healthcare = "1"
# google-healthcare = "1"
# google-composer = "1"
# google-composer = "1"
# google-searchconsole = "1"
# google-appengine = "1"
# google-appengine = "1"
# google-appengine = "1"
# google-appengine = "1"
# google-appengine = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-dfareporting = "1"
# google-apikeys = "1"
# google-bigqueryconnection = "1"
# google-bigqueryconnection = "1"
# google-firebasedataconnect = "1"
# google-firebasedataconnect = "1"
# google-commentanalyzer = "1"
# google-firebaseapphosting = "1"
# google-firebaseapphosting = "1"
# google-doubleclickbidmanager = "1"
# google-doubleclickbidmanager = "1"
# google-doubleclickbidmanager = "1"
# google-fcmdata = "1"
# google-firebasedatabase = "1"
# google-ideahub = "1"
# google-ideahub = "1"
# google-firebaseremoteconfig = "1"
# google-prod_tt_sasportal = "1"
# google-firebaseappdistribution = "1"
# google-firebaseappdistribution = "1"
# google-deploymentmanager = "1"
# google-deploymentmanager = "1"
# google-deploymentmanager = "1"
# google-datafusion = "1"
# google-datafusion = "1"
# google-tagmanager = "1"
# google-tagmanager = "1"
# google-discovery = "1"
# google-storagetransfer = "1"
# google-oauth2 = "1"
# google-oauth2 = "1"
# google-managedkafka = "1"
# google-admin = "1"
# google-admin = "1"
# google-admin = "1"
# google-bigqueryreservation = "1"
# google-bigqueryreservation = "1"
# google-bigqueryreservation = "1"
# google-vmmigration = "1"
# google-vmmigration = "1"
# google-contactcenteraiplatform = "1"
# google-doubleclicksearch = "1"
# google-backupdr = "1"
# google-ondemandscanning = "1"
# google-ondemandscanning = "1"
# google-cloudbuild = "1"
# google-cloudbuild = "1"
# google-cloudbuild = "1"
# google-cloudbuild = "1"
# google-cloudbuild = "1"
# google-policyanalyzer = "1"
# google-policyanalyzer = "1"
# google-workflows = "1"
# google-workflows = "1"
# google-secretmanager = "1"
# google-secretmanager = "1"
# google-secretmanager = "1"
# google-transcoder = "1"
# google-transcoder = "1"
# google-accesscontextmanager = "1"
# google-accesscontextmanager = "1"
# google-content = "1"
# google-content = "1"
# google-content = "1"
# google-acceleratedmobilepageurl = "1"
# google-androidpublisher = "1"
# google-androidpublisher = "1"
# google-androidpublisher = "1"
# google-digitalassetlinks = "1"
# google-classroom = "1"
# google-chromeuxreport = "1"
# google-admob = "1"
# google-admob = "1"
# google-gameservices = "1"
# google-gameservices = "1"
# google-language = "1"
# google-language = "1"
# google-language = "1"
# google-language = "1"
# google-retail = "1"
# google-retail = "1"
# google-retail = "1"
# google-bigquery = "1"
# google-driveactivity = "1"
# google-serviceuser = "1"
# google-homegraph = "1"
# google-vision = "1"
# google-vision = "1"
# google-vision = "1"
# google-firebaseappcheck = "1"
# google-firebaseappcheck = "1"
# google-appsactivity = "1"
# google-cloudsearch = "1"
# google-books = "1"
# google-docs = "1"
# google-firebasehosting = "1"
# google-firebasehosting = "1"
# google-youtube = "1"
# google-observability = "1"
# google-adsensehost = "1"
# google-lifesciences = "1"
# google-adexchangebuyer = "1"
# google-adexchangebuyer = "1"
# google-adexchangebuyer = "1"
# google-streetviewpublish = "1"
# google-advisorynotifications = "1"
# google-sourcerepo = "1"
# google-vectortile = "1"
# google-paymentsresellersubscription = "1"
# google-airquality = "1"
# google-localservices = "1"
# google-adexchangeseller = "1"
# google-adexchangeseller = "1"
# google-adexchangeseller = "1"
# google-servicebroker = "1"
# google-servicebroker = "1"
# google-servicebroker = "1"
# google-speech = "1"
# google-speech = "1"
# google-speech = "1"
# google-speech = "1"
# google-speech = "1"
# google-script = "1"
# google-realtimebidding = "1"
# google-realtimebidding = "1"
# google-chromepolicy = "1"
# google-storage = "1"
# google-storage = "1"
# google-storage = "1"
# google-slides = "1"
# google-reseller = "1"
# google-mybusinessbusinessinformation = "1"
# google-androidenterprise = "1"
# google-ids = "1"
# google-adsense = "1"
# google-adsense = "1"
# google-adsense = "1"
# google-videointelligence = "1"
# google-videointelligence = "1"
# google-videointelligence = "1"
# google-videointelligence = "1"
# google-videointelligence = "1"
# google-datamigration = "1"
# google-datamigration = "1"
# google-gkebackup = "1"
# google-adsenseplatform = "1"
# google-adsenseplatform = "1"
# google-integrations = "1"
# google-integrations = "1"
# google-customsearch = "1"
# google-kgsearch = "1"
# google-testing = "1"
# google-container = "1"
# google-container = "1"
# google-datastore = "1"
# google-datastore = "1"
# google-datastore = "1"
# google-playmoviespartner = "1"
# google-memcache = "1"
# google-memcache = "1"
# google-blockchainnodeengine = "1"
# google-cloudtrace = "1"
# google-cloudtrace = "1"
# google-cloudtrace = "1"
# google-iap = "1"
# google-iap = "1"
# google-playcustomapp = "1"
# google-dataportability = "1"
# google-dataportability = "1"
# google-mybusinessbusinesscalls = "1"
# google-policysimulator = "1"
# google-policysimulator = "1"
# google-policysimulator = "1"
# google-policysimulator = "1"
# google-firebase = "1"
# google-iam = "1"
# google-iam = "1"
# google-iam = "1"
# google-bigtableadmin = "1"
# google-bigtableadmin = "1"
# google-servicedirectory = "1"
# google-servicedirectory = "1"
# google-recommender = "1"
# google-recommender = "1"
# google-trafficdirector = "1"
# google-trafficdirector = "1"
# google-drivelabels = "1"
# google-drivelabels = "1"
# google-cloudasset = "1"
# google-cloudasset = "1"
# google-cloudasset = "1"
# google-cloudasset = "1"
# google-cloudasset = "1"
# google-cloudasset = "1"
# google-cloudbilling = "1"
# google-cloudbilling = "1"
# google-webmasters = "1"
# google-compute = "1"
# google-compute = "1"
# google-compute = "1"
# google-groupssettings = "1"
# google-workloadmanager = "1"
# google-abusiveexperiencereport = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-displayvideo = "1"
# google-ml = "1"
# google-networkconnectivity = "1"
# google-networkconnectivity = "1"
# google-batch = "1"
# google-webfonts = "1"
# google-partners = "1"
# google-cloudprofiler = "1"
# google-eventarc = "1"
# google-eventarc = "1"
# google-contentwarehouse = "1"
# google-siteverification = "1"
# google-analyticsadmin = "1"
# google-analyticsadmin = "1"
# google-verifiedaccess = "1"
# google-verifiedaccess = "1"
# google-safebrowsing = "1"
# google-safebrowsing = "1"
# google-people = "1"
# google-fcm = "1"
# google-firebasestorage = "1"
# google-manufacturers = "1"
# google-appstate = "1"
# google-servicecontrol = "1"
# google-servicecontrol = "1"
# google-datalabeling = "1"
# google-dlp = "1"
# google-mybusinessnotifications = "1"
# google-containeranalysis = "1"
# google-containeranalysis = "1"
# google-containeranalysis = "1"
# google-mybusinessqanda = "1"
# google-cloudtasks = "1"
# google-cloudtasks = "1"
# google-cloudtasks = "1"
# google-apim = "1"
# google-surveys = "1"
# google-pubsub = "1"
# google-pubsub = "1"
# google-pubsub = "1"
# google-texttospeech = "1"
# google-texttospeech = "1"
# google-marketingplatformadmin = "1"
# google-cloudprivatecatalogproducer = "1"
# google-sasportal = "1"
# google-spanner = "1"
# google-clouddeploy = "1"
# google-biglake = "1"
# google-serviceusage = "1"
# google-serviceusage = "1"
# google-chromemanagement = "1"
# google-fitness = "1"
# google-plusdomains = "1"
# google-androiddeviceprovisioning = "1"
# google-securesourcemanager = "1"
# google-kmsinventory = "1"
# google-cloudcontrolspartner = "1"
# google-cloudcontrolspartner = "1"
# google-bigquerydatapolicy = "1"
# google-bigquerydatapolicy = "1"
# google-licensing = "1"
# google-workspaceevents = "1"
# google-replicapoolupdater = "1"
# google-indexing = "1"
# google-alloydb = "1"
# google-alloydb = "1"
# google-alloydb = "1"
# google-spectrum = "1"
# google-firebaseml = "1"
# google-firebaseml = "1"
# google-firebaseml = "1"
# google-tpu = "1"
# google-tpu = "1"
# google-tpu = "1"
# google-tpu = "1"
# google-domainsrdap = "1"
# google-playablelocations = "1"
# google-groupsmigration = "1"
# google-androidmanagement = "1"
# google-run = "1"
# google-run = "1"
# google-run = "1"
# google-run = "1"
# google-cloudcommerceprocurement = "1"
# google-jobs = "1"
# google-jobs = "1"
# google-jobs = "1"
# google-jobs = "1"
# google-networksecurity = "1"
# google-networksecurity = "1"
# google-clouddebugger = "1"
# google-monitoring = "1"
# google-monitoring = "1"
# google-youtubeanalytics = "1"
# google-youtubeanalytics = "1"
# google-youtubeanalytics = "1"
# google-policytroubleshooter = "1"
# google-policytroubleshooter = "1"
# google-assuredworkloads = "1"
# google-assuredworkloads = "1"
# google-versionhistory = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-merchantapi = "1"
# google-gamesconfiguration = "1"
# google-cloudscheduler = "1"
# google-cloudscheduler = "1"
# google-vmwareengine = "1"
# google-drive = "1"
# google-drive = "1"
# google-dns = "1"
# google-dns = "1"
# google-dns = "1"
# google-dns = "1"
# google-analyticsreporting = "1"
# google-blogger = "1"
# google-blogger = "1"
# google-replicapool = "1"
# google-mybusinessplaceactions = "1"
# google-consumersurveys = "1"
# google-games = "1"
# google-gmailpostmastertools = "1"
# google-gmailpostmastertools = "1"
# google-oracledatabase = "1"
# google-dataform = "1"
# google-dataform = "1"
# google-authorizedbuyersmarketplace = "1"
# google-authorizedbuyersmarketplace = "1"
# google-authorizedbuyersmarketplace = "1"
# google-serviceconsumermanagement = "1"
# google-serviceconsumermanagement = "1"
# google-notebooks = "1"
# google-notebooks = "1"
# google-parametermanager = "1"
# google-logging = "1"
# google-logging = "1"
# google-adexperiencereport = "1"
# google-bigquerydatatransfer = "1"
# google-datacatalog = "1"
# google-datacatalog = "1"
# google-cloudshell = "1"
# google-cloudshell = "1"
# google-cloudchannel = "1"
# google-osconfig = "1"
# google-osconfig = "1"
# google-osconfig = "1"
# google-osconfig = "1"
# google-osconfig = "1"
# google-migrationcenter = "1"
# google-migrationcenter = "1"
# google-gmail = "1"
# google-workflowexecutions = "1"
# google-workflowexecutions = "1"
# google-apigateway = "1"
# google-apigateway = "1"
# google-apigateway = "1"
# google-apigateway = "1"
# google-businessprofileperformance = "1"
# google-metastore = "1"
# google-metastore = "1"
# google-metastore = "1"
# google-metastore = "1"
# google-metastore = "1"
# google-metastore = "1"
# google-pubsublite = "1"
# google-vault = "1"
# google-cloudsupport = "1"
# google-cloudsupport = "1"
# google-analytics = "1"
# google-analytics = "1"
# google-sts = "1"
# google-sts = "1"
# google-certificatemanager = "1"
# google-poly = "1"
# google-firebaserules = "1"
# google-plus = "1"
# google-dataproc = "1"
# google-dataproc = "1"
# google-mirror = "1"
# google-baremetalsolution = "1"
# google-baremetalsolution = "1"
# google-baremetalsolution = "1"
# google-managedidentities = "1"
# google-managedidentities = "1"
# google-managedidentities = "1"
# google-sql = "1"


# Standard dependencies
anyhow = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
