[package]
name = "hemmer-gcp-provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hemmer provider runtime
hemmer-provider = { path = "../../hemmer/crates/hemmer-provider" }
hemmer-core = { path = "../../hemmer/crates/hemmer-core" }
async-trait = "0.1"

# SDK dependencies for all services
# Cloud provider SDK dependencies
google-publicca_api = "1"
google-plus_api = "1"
google-firebasedataconnect_api = "1"
google-privateca_api = "1"
google-networksecurity_api = "1"
google-apigateway_api = "1"
google-firebasehosting_api = "1"
google-dns_api = "1"
google-file_api = "1"
google-youtubereporting_api = "1"
google-ondemandscanning_api = "1"
google-chromepolicy_api = "1"
google-localservices_api = "1"
google-adexchangebuyer2_api = "1"
google-tracing_api = "1"
google-androidenterprise_api = "1"
google-cloudprofiler_api = "1"
google-contactcenteraiplatform_api = "1"
google-workflows_api = "1"
google-networkmanagement_api = "1"
google-resource_named_service = "1"
google-discovery_api = "1"
google-playdeveloperreporting_api = "1"
google-mybusinessbusinessinformation_api = "1"
google-logging_api = "1"
google-metastore_api = "1"
google-biglake_api = "1"
google-apikeys_api = "1"
google-commentanalyzer_api = "1"
google-paymentsresellersubscription_api = "1"
google-dataportability_api = "1"
google-partners_api = "1"
google-firebaseappcheck_api = "1"
google-cloudtrace_api = "1"
google-contentwarehouse_api = "1"
google-bigquerydatapolicy_api = "1"
google-domainsrdap_api = "1"
google-discoveryengine_api = "1"
google-apigeeregistry_api = "1"
google-keep_api = "1"
google-gkebackup_api = "1"
google-eventarc_api = "1"
google-driveactivity_api = "1"
google-jobs_api = "1"
google-datastore_api = "1"
google-businessprofileperformance_api = "1"
google-displayvideo_api = "1"
google-sql_api = "1"
google-vectortile_api = "1"
google-testing_api = "1"
google-vmwareengine_api = "1"
google-kmsinventory_api = "1"
google-forms_api = "1"
google-ml_api = "1"
google-apihub_api = "1"
google-oslogin_api = "1"
google-bigqueryconnection_api = "1"
google-documentai_api = "1"
google-networkservices_api = "1"
google-digitalassetlinks_api = "1"
google-datapipelines_api = "1"
google-translate_api = "1"
google-streetviewpublish_api = "1"
google-verifiedaccess_api = "1"
google-notebooks_api = "1"
google-servicebroker_api = "1"
google-cloudscheduler_api = "1"
google-adexperiencereport_api = "1"
google-osconfig_api = "1"
google-mirror_api = "1"
google-fusiontables_api = "1"
google-runtimeconfig_api = "1"
google-cloudasset_api = "1"
google-adsense_api = "1"
google-manufacturers_api = "1"
google-playmoviespartner_api = "1"
google-texttospeech_api = "1"
google-securityposture_api = "1"
google-gamesconfiguration_api = "1"
google-firebase_api = "1"
google-youtubeanalytics_api = "1"
google-mediaupload = "1"
google-analytics_api = "1"
google-apphub_api = "1"
google-vision_api = "1"
google-managedidentities_api = "1"
google-firebaserules_api = "1"
google-fcmdata_api = "1"
google-essentialcontacts_api = "1"
google-cloudlocationfinder_api = "1"
google-workspaceevents_api = "1"
google-identitytoolkit_api = "1"
google-checks_api = "1"
google-androidmanagement_api = "1"
google-baremetalsolution_api = "1"
google-serviceconsumermanagement_api = "1"
google-surveys_api = "1"
google-areainsights_api = "1"
google-readerrevenuesubscriptionlinking_api = "1"
google-analyticshub_api = "1"
google-replicapoolupdater_api = "1"
google-playcustomapp_api = "1"
google-searchads360_api = "1"
google-cloudsearch_api = "1"
google-oauth2_api = "1"
google-androidpublisher_api = "1"
google-json_body = "1"
google-batch_api = "1"
google-alertcenter_api = "1"
google-workloadmanager_api = "1"
google-spectrum_api = "1"
google-acceleratedmobilepageurl_api = "1"
google-advisorynotifications_api = "1"
google-mybusinessbusinesscalls_api = "1"
google-datalineage_api = "1"
google-sasportal_api = "1"
google-servicenetworking_api = "1"
google-storagebatchoperations_api = "1"
google-mybusinessnotifications_api = "1"
google-orgpolicy_api = "1"
google-backupdr_api = "1"
google-storage_api = "1"
google-gameservices_api = "1"
google-vault_api = "1"
google-tpu_api = "1"
google-sheets_api = "1"
google-analyticsdata_api = "1"
google-alloydb_api = "1"
google-assuredworkloads_api = "1"
google-versionhistory_api = "1"
google-firebasedynamiclinks_api = "1"
google-people_api = "1"
google-consumersurveys_api = "1"
google-language_api = "1"
google-chat_api = "1"
google-recommendationengine_api = "1"
google-storagetransfer_api = "1"
google-mybusinessplaceactions_api = "1"
google-cloudchannel_api = "1"
google-bigquery_api = "1"
google-ideahub_api = "1"
google-sourcerepo_api = "1"
google-firestore_api = "1"
google-serviceusage_api = "1"
google-plusdomains_api = "1"
google-prod_tt_sasportal_api = "1"
google-sqladmin_api = "1"
google-resourcesettings_api = "1"
google-pollen_api = "1"
google-content_api = "1"
google-appsactivity_api = "1"
google-dataflow_api = "1"
google-classroom_api = "1"
google-networkconnectivity_api = "1"
google-tagmanager_api = "1"
google-run_api = "1"
google-drive_api = "1"
google-pubsublite_api = "1"
google-lifesciences_api = "1"
google-calendar_api = "1"
google-iamcredentials_api = "1"
google-datastream_api = "1"
google-datafusion_api = "1"
google-observability_api = "1"
google-recommender_api = "1"
google-cloudcommerceprocurement_api = "1"
google-servicedirectory_api = "1"
google-fcm_api = "1"
google-cloudidentity_api = "1"
google-repeated_any_query_error = "1"
google-adexchangeseller_api = "1"
google-mybusinessverifications_api = "1"
google-config_api = "1"
google-redis_api = "1"
google-videointelligence_api = "1"
google-vmmigration_api = "1"
google-webrisk_api = "1"
google-domains_api = "1"
google-cloudtasks_api = "1"
google-cloudkms_api = "1"
google-securesourcemanager_api = "1"
google-iam_api = "1"
google-poly_api = "1"
google-indexing_api = "1"
google-firebasedatabase_api = "1"
google-gkehub_api = "1"
google-playintegrity_api = "1"
google-securitycenter_api = "1"
google-binaryauthorization_api = "1"
google-cloudbuild_api = "1"
google-parametermanager_api = "1"
google-slides_api = "1"
google-siteverification_api = "1"
google-solar_api = "1"
google-civicinfo_api = "1"
google-saasservicemgmt_api = "1"
google-acmedns_api = "1"
google-aiplatform_api = "1"
google-cloudiot_api = "1"
google-abusiveexperiencereport_api = "1"
google-certificatemanager_api = "1"
google-datamanager_api = "1"
google-reseller_api = "1"
google-cloudresourcemanager_api = "1"
google-gamesmanagement_api = "1"
google-cloudbilling_api = "1"
google-compute_api = "1"
google-gmailpostmastertools_api = "1"
google-datacatalog_api = "1"
google-policyanalyzer_api = "1"
google-marketingplatformadmin_api = "1"
google-datalabeling_api = "1"
google-integrations_api = "1"
google-books_api = "1"
google-firebaseremoteconfig_api = "1"
google-looker_api = "1"
google-docs_api = "1"
google-authorizedbuyersmarketplace_api = "1"
google-script_api = "1"
google-homegraph_api = "1"
google-bigquerydatatransfer_api = "1"
google-playgrouping_api = "1"
google-blockchainnodeengine_api = "1"
google-artifactregistry_api = "1"
google-merchantapi_api = "1"
google-firebaseappdistribution_api = "1"
google-developerconnect_api = "1"
google-factchecktools_api = "1"
google-http_body = "1"
google-datamigration_api = "1"
google-chromemanagement_api = "1"
google-containeranalysis_api = "1"
google-clouderrorreporting_api = "1"
google-chromewebstore_api = "1"
google-webfonts_api = "1"
google-secretmanager_api = "1"
google-youtube_api = "1"
google-dataplex_api = "1"
google-walletobjects_api = "1"
google-recaptchaenterprise_api = "1"
google-dlp_api = "1"
google-workstations_api = "1"
google-cloudsupport_api = "1"
google-webmasters_api = "1"
google-qpxexpress_api = "1"
google-apim_api = "1"
google-analyticsreporting_api = "1"
google-connectors_api = "1"
google-blogger_api = "1"
google-rapidmigrationassessment_api = "1"
google-gmail_api = "1"
google-adexchangebuyer_api = "1"
google-serviceuser_api = "1"
google-cloudfunctions_api = "1"
google-kgsearch_api = "1"
google-accesscontextmanager_api = "1"
google-smartdevicemanagement_api = "1"
google-any = "1"
google-healthcare_api = "1"
google-composer_api = "1"
google-monitoring_api = "1"
google-speech_api = "1"
google-container_api = "1"
google-mybusinesslodging_api = "1"
google-admin_api = "1"
google-gkeonprem_api = "1"
google-doubleclickbidmanager_api = "1"
google-playablelocations_api = "1"
google-test_api = "1"
google-androiddeviceprovisioning_api = "1"
google-beyondcorp_api = "1"
google-parallelstore_api = "1"
google-customsearch_api = "1"
google-workflowexecutions_api = "1"
google-trafficdirector_api = "1"
google-adsenseplatform_api = "1"
google-dataform_api = "1"
google-oracledatabase_api = "1"
google-tasks_api = "1"
google-libraryagent_api = "1"
google-firebaseapphosting_api = "1"
google-searchconsole_api = "1"
google-ids_api = "1"
google-sts_api = "1"
google-cloudprivatecatalogproducer_api = "1"
google-clouddebugger_api = "1"
google-groupssettings_api = "1"
google-chromeuxreport_api = "1"
google-appengine_api = "1"
google-servicecontrol_api = "1"
google-cloudcontrolspartner_api = "1"
google-genomics_api = "1"
google-places_api = "1"
google-netapp_api = "1"
google-proximitybeacon_api = "1"
google-meet_api = "1"
google-admob_api = "1"
google-airquality_api = "1"
google-policysimulator_api = "1"
google-mybusinessqanda_api = "1"
google-adsensehost_api = "1"
google-remotebuildexecution_api = "1"
google-iap_api = "1"
google-spanner_api = "1"
google-clouddeploy_api = "1"
google-vpcaccess_api = "1"
google-dfareporting_api = "1"
google-managedkafka_api = "1"
google-servicemanagement_api = "1"
google-apigee_api = "1"
google-cloudprivatecatalog_api = "1"
google-retail_api = "1"
google-contactcenterinsights_api = "1"
google-toolresults_api = "1"
google-websecurityscanner_api = "1"
google-deploymentmanager_api = "1"
google-pubsub_api = "1"
google-appstate_api = "1"
google-realtimebidding_api = "1"
google-firebaseml_api = "1"
google-bigtableadmin_api = "1"
google-css_api = "1"
google-groupsmigration_api = "1"
google-policytroubleshooter_api = "1"
google-dialogflow_api = "1"
google-migrationcenter_api = "1"
google-addressvalidation_api = "1"
google-doubleclicksearch_api = "1"
google-drivelabels_api = "1"
google-cloudshell_api = "1"
google-memcache_api = "1"
google-safebrowsing_api = "1"
google-transcoder_api = "1"
google-bigqueryreservation_api = "1"
google-pagespeedonline_api = "1"
google-games_api = "1"
google-urlshortener_api = "1"
google-fitness_api = "1"
google-billingbudgets_api = "1"
google-replicapool_api = "1"
google-area120tables_api = "1"
google-accessapproval_api = "1"
google-firebasestorage_api = "1"
google-licensing_api = "1"
google-mybusinessaccountmanagement_api = "1"
google-dataproc_api = "1"
google-blogger_3 = "1"
google-analyticsadmin_api = "1"


# Standard dependencies
anyhow = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
